--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <title>Notes</title>
 </head>
 
-<body class=''>
+<body class='bg-neutral-900'>
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
